[gd_scene load_steps=3 format=3 uid="uid://dr1gtr3h7x1pm"]

[ext_resource type="Texture2D" uid="uid://du263rxq82bwa" path="res://Assets/Corazon.svg" id="1_4u3ac"]
[ext_resource type="Script" path="res://Scripts/UI/ui.gd" id="1_nolks"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nolks")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(150, 150)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -596.0
offset_bottom = 173.0
grow_horizontal = 0

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
alignment = 2

[node name="VBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
alignment = 2

[node name="Corazon1" type="TextureRect" parent="HBoxContainer/VBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = ExtResource("1_4u3ac")
expand_mode = 3

[node name="Corazon2" type="TextureRect" parent="HBoxContainer/VBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("1_4u3ac")
expand_mode = 3

[node name="Corazon3" type="TextureRect" parent="HBoxContainer/VBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("1_4u3ac")
expand_mode = 3

[node name="Coins" type="Label" parent="HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Coins:"
horizontal_alignment = 2

[node name="ColorRect" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.259294, 0.259294, 0.259294, 1)

[node name="Game Over" type="Label" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -543.0
offset_top = -136.5
offset_right = 543.0
offset_bottom = 136.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 200
text = "Game Over"
